# omni-tts-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.base  README.md  main.py  pyproject.toml
scripts/: bench_service.py  download_model.py  seed_voices.py
src/tts_service/: audio.py  engine.py  main.py  schemas.py  settings.py  voices.py
src/tts_service/static/: app.js  index.html  styles.css
tests/: test_api.py  test_audio.py
voices/: README.md  voices.json
