[project]
name = "tts-service"
version = "0.1.0"
description = "Telephony TTS service (8 kHz raw PCM) built on omnivoice-triton"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "numpy>=1.26",
    "scipy>=1.13",
    "soundfile>=0.12",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gpu = [
    # Installed separately from the cu128 index in the Dockerfile:
    #   pip install torch==2.8.0+cu128 torchaudio==2.8.0+cu128 \
    #       --extra-index-url https://download.pytorch.org/whl/cu128
    "omnivoice-triton>=0.1",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
